CreateRoom: Prevent content from shifting when error occurs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,7 @@ input {
 
 .error {
   color: red;
+  white-space: pre-wrap;
 }
 
 .starting-page {
